# musi

./: CMakeLists.txt  LICENSE  README.md  animations.c  animations.h  fft.c  fft.h  main.c
src/: animations.c  animations.h  fft.c  fft.h  main.c
